Add in the ParentTree model
