# src/main/java/com/ontotext/parenttree/model/MediaType.java
@@ -1,0 +1,9 @@
+package com.ontotext.parenttree.model;
+
+/** **/
+public class MediaType {
+
+    public static final String PARENT_TREE_JSON = "application/vnd.ontotext.parenttree+json; charset=utf-8";
+    public static final String PARENT_TREE_XML = "application/vnd.ontotext.parenttree+xml; charset=utf-8";
+
+}
