# src/main/java/com/ontotext/parenttree/model/Namespace.java
@@ -1,0 +1,8 @@
+package com.ontotext.parenttree.model;
+
+/** **/
+interface Namespace {
+
+    String DEFAULT_NAMESPACE = "http://www.ontotext.com/parenttree/";
+
+}
